-bug#0001318: Graph Export with 1 minute poller re-exports graphs 5 times
-bug#0001320: Invalid PHP_SELF Path
-bug#0001326: If a user's password contains a single quote the login fails
-bug#0001342: VRULE printed as HRULE on graph_templates.php graph template item list
-bug#0001351: Deleting 1000 graphs along with their Data Sources crashes the Server
-bug#0001374: ss_host_disk.php etc. error corrected when using SNMP V3 (index off by 1)
-bug#0001376: graph_items.php variable $id defined in wrong place
-bug#0001378: ping.pl script fails when using tcp:hostname    
-bug#0001382: cdef.php error due to wrong function name
-bug#0001383: syntax error in lib/rrd.php with PHP 4.4.4
-bug#0001384: utilities.php does not handle view_snmp_cache when host_id = -1 (Any)
-bug#0001385: LDAP Error: Group DN could not be found
-bug#0001391: parsing snmp string with "=" ?? --> WARNING: Result from SNMP not valid
-bug#0001392: Problem on CDEF function ALL|SIMILAR_DATA_SOURCES_(NO)?DUPS 
-bug: Remove include/html files to mitigate XSS issues
-bug: IE generates errors on both the host and graph settings pages
-bug: Host save failed in FireFox 3 for non-SNMP V3 hosts, complaining about "password mismatch"
-bug: Initialization of snmp_auth when using SNMP=NONE
-bug: Speed up add_graphs.php in most cases (still slow only if --input-fields is used)
-bug: If the poller_output table is not empty, don't flood the log
-bug: Remove warnings appear in the httpd log relative to reset attempts on settings array
-bug: Add API Automation tool quietMode to additional functions
-bug: When Cacti is launched from within an iframe, cookies are dropped from IE6
-bug: Database upgrade and cacti.sql differ
-bug: drop color setting background on FF does not work
-bug: cli/add_tree.php requires as least a host-id for --list-graphs
-bug: add_tree.php did not allow nodes with propagating sort options
-bug: When adding a tree node via the api numeric and natural were reversed